# libnaval

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  setup.py
assets/: angle_restraints.csv  bond_restraints.csv
assets/angles_lengths/: A_angle_C1p_N9_C4_prosco.json  A_angle_C1p_N9_C8_prosco.json  A_angle_C2_N1_C6_prosco.json  A_angle_C2_N3_C4_prosco.json  A_angle_C2p_C1p_N9_prosco.json  A_angle_C2p_C1p_O4p_prosco.json  A_angle_C4_C5_C6_prosco.json  A_angle_C4_C5_N7_prosco.json  A_angle_C4_N9_C8_prosco.json  A_angle_C5_C4_N3_prosco.json  A_angle_C5_C4_N9_prosco.json  A_angle_C5_C6_N1_prosco.json  A_angle_C5_C6_N6_prosco.json  A_angle_C5_N7_C8_prosco.json  A_angle_C5p_C4p_O4p_prosco.json  A_angle_C6_C5_N7_prosco.json  A_angle_N1_C2_N3_prosco.json  A_angle_N1_C6_N6_prosco.json  A_angle_N3_C4_N9_prosco.json  A_angle_N7_C8_N9_prosco.json  A_angle_N9_C1p_O4p_prosco.json  A_angle_O5p_P_OP1_prosco.json  A_angle_O5p_P_OP2_prosco.json  A_length_C1p_N9_prosco.json  A_length_C2_N1_prosco.json  A_length_C2_N3_prosco.json  A_length_C3p_C4p_prosco.json  A_length_C4_C5_prosco.json  A_length_C4_N3_prosco.json  A_length_C4_N9_prosco.json  A_length_C5_C6_prosco.json  A_length_C5_N7_prosco.json  A_length_C6_N1_prosco.json  A_length_C6_N6_prosco.json  A_length_C8_N7_prosco.json  A_length_C8_N9_prosco.json  C_angle_C1p_C2p_C3p_prosco.json  C_angle_C1p_N1_C2_prosco.json  C_angle_C1p_N1_C6_prosco.json  C_angle_C2_N1_C6_prosco.json  (+248 more)
cmake/: navalConfig.cmake.in
examples/: example.cpp  example.py
include/libnaval/: data.hpp  naval.hpp
scripts/: deduplicate_data.py  generate_data_compact.py
src/: data.cpp  naval.cpp  naval_cli.cpp  python_bindings.cpp
src/data_measurements/: data_A_angle_C1p_C2p_C3p.cpp  data_A_angle_C1p_C2p_O2p.cpp  data_A_angle_C1p_N9_C4.cpp  data_A_angle_C1p_N9_C8.cpp  data_A_angle_C1p_O4p_C4p.cpp  data_A_angle_C2_N1_C6.cpp  data_A_angle_C2_N3_C4.cpp  data_A_angle_C2p_C1p_N9.cpp  data_A_angle_C2p_C1p_O4p.cpp  data_A_angle_C2p_C3p_C4p.cpp  data_A_angle_C2p_C3p_O3p.cpp  data_A_angle_C3p_C2p_O2p.cpp  data_A_angle_C3p_C4p_C5p.cpp  data_A_angle_C3p_C4p_O4p.cpp  data_A_angle_C3p_O3p_P.cpp  data_A_angle_C3p_O3p_Pr2.cpp  data_A_angle_C3pr2_O3pr2_P.cpp  data_A_angle_C4_C5_C6.cpp  data_A_angle_C4_C5_N7.cpp  data_A_angle_C4_N9_C8.cpp  data_A_angle_C4p_C3p_O3p.cpp  data_A_angle_C4p_C5p_O5p.cpp  data_A_angle_C5_C4_N3.cpp  data_A_angle_C5_C4_N9.cpp  data_A_angle_C5_C6_N1.cpp  data_A_angle_C5_C6_N6.cpp  data_A_angle_C5_N7_C8.cpp  data_A_angle_C5p_C4p_O4p.cpp  data_A_angle_C5p_O5p_P.cpp  data_A_angle_C6_C5_N7.cpp  data_A_angle_N1_C2_N3.cpp  data_A_angle_N1_C6_N6.cpp  data_A_angle_N3_C4_N9.cpp  data_A_angle_N7_C8_N9.cpp  data_A_angle_N9_C1p_O4p.cpp  data_A_angle_O3p_P_O5p.cpp  data_A_angle_O3p_P_OP1.cpp  data_A_angle_O3p_P_OP2.cpp  data_A_angle_O3pr2_P_O5p.cpp  data_A_angle_O3pr2_P_OP1.cpp  (+544 more)
